--- a/services/api_gateway/Dockerfile
+++ b/services/api_gateway/Dockerfile
@@ -6,7 +6,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy service-specific files
-COPY ./api_gateway /app/api_gateway
+COPY ./services/api_gateway /app/api_gateway
 
 # Run the service
-CMD ["uvicorn", "api_gateway.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api_gateway.main:app", "--host", "0.0.0.0", "--port", "8100"]
