--- a/services/user_service/Dockerfile
+++ b/services/user_service/Dockerfile
@@ -6,7 +6,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy service-specific files
-COPY ./user_service /app/user_service
+COPY ./services/user_service /app/user_service
 
 # Run the service
-CMD ["uvicorn", "user_service.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "user_service.main:app", "--host", "0.0.0.0", "--port", "8100"]
