--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,39 +1,74 @@
-# Core dependencies
-fastapi>=0.115.12
-uvicorn>=0.22.0
-sqlalchemy>=2.0.0
-pydantic>=2.0.0
-httpx>=0.24.0
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-python-multipart>=0.0.6
-email-validator>=2.0.0
-
-# Database
-psycopg2-binary>=2.9.6  # For PostgreSQL
-alembic>=1.11.0  # Database migrations
-
-# Production
-gunicorn>=20.1.0
-prometheus-client>=0.16.0
-opentelemetry-api>=1.17.0
-opentelemetry-sdk>=1.17.0
-opentelemetry-exporter-otlp>=1.17.0
-
-# Utilities
-python-dotenv>=1.0.0
-tenacity>=8.2.2
-pyyaml>=6.0
-jinja2>=3.1.2
-
-# For LLM service
-requests>=2.30.0
-numpy>=1.24.0
-
-# Development
-pytest>=7.3.1
-pytest-asyncio>=0.21.0
-black>=23.3.0
-isort>=5.12.0
-flake8>=6.0.0
-
+alembic==1.15.2
+annotated-types==0.7.0
+anyio==4.9.0
+bcrypt==4.3.0
+black==25.1.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cryptography==44.0.2
+Deprecated==1.2.18
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.115.12
+flake8==7.2.0
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.6.1
+iniconfig==2.1.0
+isort==6.0.1
+Jinja2==3.1.6
+Mako==1.3.9
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mypy-extensions==1.0.0
+numpy==2.2.4
+opentelemetry-api==1.31.1
+opentelemetry-exporter-otlp==1.31.1
+opentelemetry-exporter-otlp-proto-common==1.31.1
+opentelemetry-exporter-otlp-proto-grpc==1.31.1
+opentelemetry-exporter-otlp-proto-http==1.31.1
+opentelemetry-proto==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
+packaging==24.2
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.7
+pluggy==1.5.0
+prometheus_client==0.21.1
+protobuf==5.29.4
+psycopg2-binary==2.9.10
+pyasn1==0.4.8
+pycodestyle==2.13.0
+pycparser==2.22
+pydantic==2.11.2
+pydantic-settings==2.8.1
+pydantic_core==2.33.1
+pyflakes==3.3.2
+pytest==8.3.5
+pytest-asyncio==0.26.0
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+requests==2.32.3
+rsa==4.9
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.1
+tenacity==9.1.2
+typing-inspection==0.4.0
+typing_extensions==4.13.1
+urllib3==2.3.0
+uvicorn==0.34.0
+wrapt==1.17.2
+zipp==3.21.0
